[gd_scene load_steps=7 format=3 uid="uid://d4lsvvq5xan4r"]

[ext_resource type="Script" path="res://menu.gd" id="1_n002i"]
[ext_resource type="Texture2D" uid="uid://dtdqa3wmuos3e" path="res://levels/menus/pause_menu.png" id="2_ar7ac"]
[ext_resource type="Texture2D" uid="uid://ed3qghxhlj6u" path="res://levels/menus/exit_button.png" id="3_bi34n"]
[ext_resource type="Texture2D" uid="uid://bjxcjvb5cpofx" path="res://levels/menus/resume_button.png" id="4_kdq3o"]
[ext_resource type="Texture2D" uid="uid://d1btoxksiibt4" path="res://levels/menus/control_button.png" id="5_q3x6r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c0odp"]

[node name="PauseMenu" type="Node2D"]
script = ExtResource("1_n002i")

[node name="PauseMenu" type="Sprite2D" parent="."]
position = Vector2(961, 563)
texture = ExtResource("2_ar7ac")

[node name="ExitButton" type="Button" parent="."]
offset_left = 982.0
offset_top = 238.0
offset_right = 1290.0
offset_bottom = 546.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_c0odp")
icon = ExtResource("3_bi34n")
flat = true

[node name="ExitButton2" type="Button" parent="."]
offset_left = 710.0
offset_top = 238.0
offset_right = 1018.0
offset_bottom = 546.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_c0odp")
icon = ExtResource("3_bi34n")
flat = true

[node name="ExitButton3" type="Button" parent="."]
offset_left = 438.0
offset_top = 486.0
offset_right = 746.0
offset_bottom = 794.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_c0odp")
icon = ExtResource("3_bi34n")
flat = true

[node name="ExitButton4" type="Button" parent="."]
offset_left = 438.0
offset_top = 238.0
offset_right = 746.0
offset_bottom = 546.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_c0odp")
icon = ExtResource("3_bi34n")
flat = true

[node name="ResumeButton" type="Button" parent="."]
offset_left = 984.0
offset_top = 487.0
offset_right = 1292.0
offset_bottom = 795.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_c0odp")
icon = ExtResource("4_kdq3o")
flat = true

[node name="ControlsButton" type="Button" parent="."]
offset_left = 712.0
offset_top = 498.0
offset_right = 1020.0
offset_bottom = 806.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_c0odp")
icon = ExtResource("5_q3x6r")
flat = true
